Set Up Push Notifications From Parse

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,22 +6,32 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
 
+    <permission
+        android:name="com.racecondition.ribbit.app.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.racecondition.ribbit.app.permission.C2D_MESSAGE" />
+
     <application
         android:name="com.racecondition.ribbit.app.RibbitApplication"
         android:allowBackup="true"
+        android:debuggable="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Ribbit"
-        android:debuggable="false" >
+        android:theme="@style/Theme.Ribbit">
         <activity
             android:name=".com.racecondition.ribbit.app.ui.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,13 +41,13 @@
         <activity
             android:name=".com.racecondition.ribbit.app.ui.LoginActivity"
             android:label="@string/title_activity_login"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait">
+            </activity>
         <activity
             android:name=".com.racecondition.ribbit.app.ui.SignUpActivity"
             android:label="@string/title_activity_sign_up"
             android:parentActivityName=".com.racecondition.ribbit.app.ui.LoginActivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.racecondition.ribbit.app.LoginActivity" />
@@ -45,13 +55,13 @@
         <activity
             android:name=".com.racecondition.ribbit.app.ui.ForgotPasswordActivity"
             android:label="@string/title_activity_forgot"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait">
+            </activity>
         <activity
             android:name=".com.racecondition.ribbit.app.ui.EditFriendsActivity"
             android:label="@string/title_activity_edit_friends"
             android:parentActivityName=".com.racecondition.ribbit.app.ui.MainActivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
@@ -60,7 +70,7 @@
             android:name=".com.racecondition.ribbit.app.ui.RecipientsActivity"
             android:label="@string/title_activity_recipients"
             android:parentActivityName=".com.racecondition.ribbit.app.ui.MainActivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
@@ -74,6 +84,25 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.racecondition.ribbit.app.MainActivity" />
         </activity>
+
+        <service android:name="com.parse.PushService" />
+
+        <receiver android:name="com.parse.ParseBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="com.parse.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="com.racecondition.ribbit.app" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
