--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 19
@@ -8,7 +8,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 19
         versionCode 4
-        versionName "2.0"
+        versionName "4.0"
     }
     buildTypes {
         release {
