--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Apr 19 13:06:34 PDT 2014
-sdk.dir=/Applications/Android Studio.app/sdk
+#sdk.dir=/Applications/Android Studio.app/sdk
