--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.racecondition.ribbitsdm.app"
-    android:versionCode="4">
+    package="com.racecondition.ribbitsdm.app" >
 
-    <uses-sdk
-        tools:node="replace" />
+<!--    <uses-sdk
+        tools:node="replace" />-->
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -53,7 +51,7 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.racecondition.ribbitsdm.app.LoginActivity" />
+                android:value="com.racecondition.ribbitsdm.app.ui.LoginActivity" />
         </activity>
         <activity
             android:name=".ui.ForgotPasswordActivity"
@@ -67,7 +65,7 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="MainActivity" />
+                android:value="com.racecondition.ribbitsdm.app.ui.MainActivity" />
         </activity>
         <activity
             android:name=".ui.RecipientsActivity"
@@ -76,7 +74,7 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="MainActivity" />
+                android:value="com.racecondition.ribbitsdm.app.ui.MainActivity" />
         </activity>
         <activity
             android:name=".ui.ViewImageActivity"
@@ -85,7 +83,7 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.racecondition.ribbitsdm.app.MainActivity" />
+                android:value="com.racecondition.ribbitsdm.app.ui.MainActivity" />
         </activity>
 
         <service android:name="com.parse.PushService" />
