--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.racecondition.ribbitsdm.app"
+    package="com.racecondition.ribbitsdmp.app"
     android:versionCode="4">
 
-    <uses-sdk
-        tools:node="replace" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -16,17 +17,12 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="true" />
-
-    <permission
-        android:name="com.racecondition.ribbitsdm.app.permission.C2D_MESSAGE"
-        android:protectionLevel="signature" />
-    <uses-permission android:name="com.racecondition.ribbitsdm.app.permission.C2D_MESSAGE" />
+    <permission android:protectionLevel="signature"
+        android:name="com.racecondition.ribbitsdmp.app.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.racecondition.ribbitsdmp.app.permission.C2D_MESSAGE" />
 
     <application
-        android:name="RibbitApplication"
+        android:name=".RibbitApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -53,7 +49,7 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.racecondition.ribbitsdm.app.LoginActivity" />
+                android:value="com.racecondition.ribbitsdmp.app.ui.LoginActivity" />
         </activity>
         <activity
             android:name=".ui.ForgotPasswordActivity"
@@ -67,7 +63,7 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="MainActivity" />
+                android:value="com.racecondition.ribbitsdmp.app.ui.MainActivity" />
         </activity>
         <activity
             android:name=".ui.RecipientsActivity"
@@ -76,7 +72,7 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="MainActivity" />
+                android:value="com.racecondition.ribbitsdmp.app.ui.MainActivity" />
         </activity>
         <activity
             android:name=".ui.ViewImageActivity"
@@ -85,7 +81,7 @@
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.racecondition.ribbitsdm.app.MainActivity" />
+                android:value="com.racecondition.ribbitsdmp.app.ui.MainActivity" />
         </activity>
 
         <service android:name="com.parse.PushService" />
@@ -103,7 +99,7 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-                <category android:name="com.racecondition.ribbitsdm.app" />
+                <category android:name="com.racecondition.ribbitsdmp.app" />
             </intent-filter>
         </receiver>
     </application>
