--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Apr 19 13:06:34 PDT 2014
-sdk.dir=/Applications/Android Studio.app/sdk
+#Fri Jul 03 21:21:16 PDT 2015
+sdk.dir=/Users/tboland/sdk
