- added bolts android library for Parse

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,13 +103,16 @@
                 <category android:name="com.racecondition.ribbitsdm.app" />
             </intent-filter>
         </receiver>
-        <receiver android:name="com.parse.ParsePushBroadcastReceiver" android:exported="false">
+        <receiver android:name="com.racecondition.ribbitsdm.app.utils.Receiver"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.parse.push.intent.RECEIVE" />
                 <action android:name="com.parse.push.intent.DELETE" />
                 <action android:name="com.parse.push.intent.OPEN" />
             </intent-filter>
         </receiver>
+        <meta-data android:name="com.parse.push.notification_icon"
+            android:resource="@drawable/ic_stat_ic_launcher"/>
     </application>
 
 </manifest>
