--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Ribbit">
         <activity
-            android:name=".ui.MainActivity"
+            android:name="com.racecondition.ribbitsdmp.app.ui.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -40,50 +40,50 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.LoginActivity"
+            android:name="com.racecondition.ribbitsdmp.app.ui.LoginActivity"
             android:label="@string/title_activity_login"
             android:screenOrientation="portrait">
             </activity>
         <activity
-            android:name=".ui.SignUpActivity"
+            android:name="com.racecondition.ribbitsdmp.app.ui.SignUpActivity"
             android:label="@string/title_activity_sign_up"
-            android:parentActivityName=".ui.LoginActivity"
+            android:parentActivityName="com.racecondition.ribbitsdmp.app.ui.LoginActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.racecondition.ribbitsdm.app.ui.LoginActivity" />
+                android:value="com.racecondition.ribbitsdmp.app.ui.LoginActivity" />
         </activity>
         <activity
-            android:name=".ui.ForgotPasswordActivity"
+            android:name="com.racecondition.ribbitsdmp.app.ui.ForgotPasswordActivity"
             android:label="@string/title_activity_forgot"
             android:screenOrientation="portrait">
             </activity>
         <activity
-            android:name=".ui.EditFriendsActivity"
+            android:name="com.racecondition.ribbitsdmp.app.ui.EditFriendsActivity"
             android:label="@string/title_activity_edit_friends"
-            android:parentActivityName=".ui.MainActivity"
+            android:parentActivityName="com.racecondition.ribbitsdmp.app.ui.MainActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.racecondition.ribbitsdm.app.ui.MainActivity" />
+                android:value="com.racecondition.ribbitsdmp.app.ui.MainActivity" />
         </activity>
         <activity
-            android:name=".ui.RecipientsActivity"
+            android:name="com.racecondition.ribbitsdmp.app.ui.RecipientsActivity"
             android:label="@string/title_activity_recipients"
-            android:parentActivityName=".ui.MainActivity"
+            android:parentActivityName="com.racecondition.ribbitsdmp.app.ui.MainActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.racecondition.ribbitsdm.app.ui.MainActivity" />
+                android:value="com.racecondition.ribbitsdmp.app.ui.MainActivity" />
         </activity>
         <activity
-            android:name=".ui.ViewImageActivity"
+            android:name="com.racecondition.ribbitsdmp.app.ui.ViewImageActivity"
             android:label="@string/title_activity_view_image"
-            android:parentActivityName=".ui.MainActivity"
+            android:parentActivityName="com.racecondition.ribbitsdmp.app.ui.MainActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.racecondition.ribbitsdm.app.ui.MainActivity" />
+                android:value="com.racecondition.ribbitsdmp.app.ui.MainActivity" />
         </activity>
 
         <service android:name="com.parse.PushService" />
