--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 19
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 23
+        minSdkVersion 14
+        targetSdkVersion 19
         versionCode 4
         versionName "4.0"
     }
@@ -19,12 +19,12 @@ android {
 }
 
 dependencies {
-    compile fileTree('src/main/libs')
+    //compile fileTree('src/main/libs')
     compile files('src/main/libs/bolts-android-1.2.0.jar')
     compile files('src/main/libs/commons-io-2.4.jar')
     compile files('src/main/libs/Parse-1.9.4.jar')
     compile files('src/main/libs/picasso-2.2.0.jar')
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    //compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:19.1.0'
     compile 'com.google.android.gms:play-services:8.1.0'
 }
