--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,26 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 19
+        applicationId "com.racecondition.ribbitsdmp.app"
+        minSdkVersion 16
+        targetSdkVersion 22
         versionCode 4
         versionName "4.0"
     }
     buildTypes {
+        debug {
+            applicationIdSuffix ".debug"
+            buildConfigField "boolean", "LOGGING_ENABLED", "true"
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            buildConfigField "boolean", "LOGGING_ENABLED", "true"
         }
     }
 }
@@ -25,6 +32,7 @@ dependencies {
     compile files('src/main/libs/Parse-1.9.4.jar')
     compile files('src/main/libs/picasso-2.2.0.jar')
     //compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:19.1.0'
-    compile 'com.google.android.gms:play-services:8.1.0'
+    //compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.android.support:support-v13:22.2.1'
+    compile 'com.google.android.gms:play-services:8.3.0'
 }
