--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     //compile 'com.android.support:support-v4:22.2.1'
     compile 'com.android.support:support-v13:22.2.1'
     compile 'com.google.android.gms:play-services:8.3.0'
+    compile 'com.android.support:design:22.2.1'
+
 }
