--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity
             android:name="com.racecondition.ribbitsdmp.app.ui.MainActivity"
             android:label="@string/app_name"
+            android:theme="@style/Theme.Ribbit.NoActionBar"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
