--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Oct 11 15:17:34 PDT 2015
+#Sat Feb 06 11:58:43 PST 2016
+ndk.dir=/Users/tboland/sdk/ndk-bundle
 sdk.dir=/Users/tboland/sdk
